--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reactprac",
   "version": "0.1.0",
+  "homepage": "https://greeting989.github.io/heightconverter",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
